@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE([galculator], [2.1beta])
+AM_INIT_AUTOMAKE([galculator], [2.1])
 AM_MAINTAINER_MODE
 
 AC_CONFIG_HEADER(config.h)
